--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-base_url = "https://samyhaff.github.io"
-title = "Samy Haffoudhi"
-description = "My personal site"
+base_url = "https://whelixw.github.io"
+title = "André Jørgensen — Bioinformatics"
+description = "Bioinformatics engineer focused on reproducible HPC pipelines, pangenomics, and NGS analysis."
 
 compile_sass = true
 build_search_index = false
@@ -34,14 +34,14 @@ anchors = "on"
 
 [extra]
 
-name = "Samy"                         # Your name
-id = "samyhaff"                           # Your id / username / handle
-bio = "PhD student in NLP at Télécom Paris"                          # Your bio
-avatar = "img/avatar.jpeg"            # Your avatar
-links = [                             # Your links
-    { name = "GitHub", icon = "github", url = "https://github.com/samyhaff" },
-    { name = "Twitter", icon = "twitter", url = "https://x.com/samyhaff" },
-    { name = "Email", icon = "email", url = "mailto:haffoudhisamy@gmail.com" },
+name = "André Jørgensen"
+id = "whelixw"
+bio = "Bioinformatics engineer building reproducible HPC pipelines for pangenomics and NGS analysis."
+avatar = "img/avatar.jpeg"
+links = [
+    { name = "GitHub", icon = "github", url = "https://github.com/whelixw" },
+    { name = "LinkedIn", icon = "linkedin", url = "https://www.linkedin.com/in/andr%C3%A9-rosengaard-j%C3%B8rgensen" },
+    { name = "Email", icon = "email", url = "mailto:andrerosenj@gmail.com" },
 ]
 
 homepage_layout = "about"             # "about" | "list" | "recent"
@@ -52,11 +52,11 @@ recent_more_text = "more »"
 
 sections = [
     { name = "projects", path = "/projects", is_external = false },
-    {name = "teaching", path = "/teaching", is_external = false},
+    { name = "teaching", path = "/teaching", is_external = false },
     { name = "blog", path = "/blog", is_external = false },
     { name = "about", path = "/about", is_external = false },
-    { name = "github", path = "https://github.com/samyhaff", is_external = true },
-    { name = "google scholar", path = "https://scholar.google.com/citations?user=YI7i_z8AAAAJ&hl", is_external = true },
+    { name = "github", path = "https://github.com/whelixw", is_external = true },
+    { name = "linkedin", path = "https://www.linkedin.com/in/andr%C3%A9-rosengaard-j%C3%B8rgensen", is_external = true },
 ]
 blog_section_path = "/blog"
 
