--- a/content/projects/data.toml
+++ b/content/projects/data.toml
@@ -4,6 +4,7 @@ desc = "A progressive, graph-based tool designed to linearize circular mtDNA seq
 tags = ["pangenomics", "genome variation graphs", "vg", "hpc", "mitochondria"]
 img = "/img/thesis.png"
 links = [
+  { name = "Source (vgorient)", url = "https://github.com/whelixw/vgorient" },
   { name = "Manuscript (PDF)", url = "/assets/manuscript.pdf" },
   { name = "Thesis (PDF)", url = "/assets/thesis_final.pdf" }
 ]
