--- a/content/projects/data.toml
+++ b/content/projects/data.toml
@@ -9,7 +9,7 @@ links = [
   { name = "Thesis (PDF)", url = "/assets/thesis_final.pdf" }
 ]
 [[project]]
-name = "Wildfire Prediction using Weather"
+name = "Wildfire Prediction Using Weather"
 desc = "A data-integration/machine learning project for predicting wildfires using two Kaggle datasets"
 tags = ["machine learning", "data integration", "gradient boosting", "wildfire", "weather"]
 img = "/img/wildfires.jpg"
